# ModernCpp

./: README.md  freshinstall.sh
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_2/src/: main.cpp
